--- a/templates/room.jade
+++ b/templates/room.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang=ja)
   head
     meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width")
     title="TRPG Chat"
     script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
